# codebase

./: .gitignore  README.md  codebase.code-workspace
cksl/: README.md  configure.sh
cksl/src/: main.c  meson.build
cksl/src/include/ksl/: ksl.h  ksl_ast.h  parser.h  token.h  utils.h  vector.h
cksl/src/ksl/: ksl_input.c  ksl_parser.c  ksl_process.c  meson.build  parser.c  token.c  utils.c  vector.c
cmatrix/: README.md  build.sh  configure.sh
cmatrix/data/: test.mt
cmatrix/include/matrix/: matrix.h
cmatrix/src/: CMakeLists.txt  Doxyfile  main.c  meson.build
cmatrix/src/include/matrix/: USAGE.md  matrix.h  matrix_ext.h  utils.h
cmatrix/src/matrix/: CMakeLists.txt  attribute_matrix.c  ext_matrix.c  init_matrix.c  manipulate_matrix.c  meson.build  utils.c
cprimerplus/: README.md
functional-rs/: README.md
functional-rs/ch01/: Cargo.toml
functional-rs/ch01/src/: lib.rs  main.rs
hsdev/: README.md  hsdev.cabal  stack.yaml
hsdev/app/: Main.hs
hsdev/src/: Tool.hs
hsdev/test/: Main.hs
psqdev/: README.md
psqdev/src/: cities.psql
